--- a/SimTECH/SimTECH/Pages/Season/Entrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants.razor
@@ -1,16 +1,17 @@
-﻿<MudContainer>
-    <MudTabs>
-        <MudTabPanel Text="Drivers">
-            <SeasonDrivers />
-        </MudTabPanel>
-        <MudTabPanel Text="Teams">
-            <SeasonTeams />
-        </MudTabPanel>
-        <MudTabPanel Text="Engines">
-            <SeasonEngines />
-        </MudTabPanel>
-    </MudTabs>
-</MudContainer>
+﻿<MudTabs Outlined="true" Centered="true">
+    <MudTabPanel Text="Drivers">
+        <SeasonDrivers />
+    </MudTabPanel>
+    <MudTabPanel Text="Teams">
+        <SeasonTeams />
+    </MudTabPanel>
+    <MudTabPanel Text="Engines">
+        <SeasonEngines />
+    </MudTabPanel>
+    <MudTabPanel Text="Power ranking">
+        <PowerRankings />
+    </MudTabPanel>
+</MudTabs>
 
 @code {
     // Possibly move the contents of the entrant components to here... possibly!
