--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -15,15 +15,14 @@
         <Columns>
             <HierarchyColumn T="Team" />
             <PropertyColumn Property="e => e.Name" />
-            <TemplateColumn Title="Country">
+            <TemplateColumn Title="Country" Sortable="false">
                 <CellTemplate>
                     <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.State" />
-            <TemplateColumn CellClass="d-flex justify-end">
+            <TemplateColumn Sortable="false" CellClass="d-flex justify-end">
                 <CellTemplate>
-
                     <MudButtonGroup>
                         <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTeam(context.Item))" />
                     </MudButtonGroup>
