--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -97,9 +97,9 @@
                     <MudItem xs="12">
                         <MudPaper Elevation="15" Class="pa-4">
                             <MudStack Row="true">
-                                <MudText Typo="Typo.h3">Settings</MudText>
+                                <MudText Typo="Typo.h4">Settings</MudText>
                                 <MudSpacer />
-                                <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason">Edit settings</MudButton>
+                                <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason">Edit</MudButton>
                             </MudStack>
                         </MudPaper>
                     </MudItem>
