--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -18,7 +18,7 @@
             <PropertyColumn Property="e => e.Type" />
             <PropertyColumn Property="e => e.ForWetConditions" />
             <PropertyColumn Property="e => e.State" />
-            <TemplateColumn CellClass="d-flex justify-end">
+            <TemplateColumn Sortable="false" CellClass="d-flex justify-end">
                 <CellTemplate>
                     <MudButtonGroup>
                         <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrait(context.Item))" />
